--- a/reelfishr-client/src/App.css
+++ b/reelfishr-client/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton');
+@import url('https://fonts.googleapis.com/css?family=Poller+One');
 
 .App {
   text-align: center;
@@ -28,3 +29,51 @@
 div.ui.inverted.segment {
 	padding-top: 0px
 }
+
+.ui.card>.content .title.header {
+	font-family: 'Poller One', cursive;
+}
+
+.ui.card>.content .title.synopsis {
+	font-family: 'Poller One', cursive;
+}
+
+.ui.card>.content, .ui.cards>.card>.content.header {
+	background-color: lightyellow;
+}
+
+
+.ui.card>.content {
+	color: black;
+}
+
+ .border {
+ 	border: 3px black solid;
+ }
+
+.ui.selection.dropdown {
+	border: 3px black solid;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+body::after {
+  content: "";
+  background-image: url(reel.jpg);
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
+}
+
