--- a/reelfishr-client/src/index.css
+++ b/reelfishr-client/src/index.css
@@ -1,7 +1,7 @@
-body {
+/*body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-color: #a5acb7;
-/*  background-image: "./reel.jpg";*/
-}
+  background-image: "./reel.jpg";
+}*/
